; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_skip_buf.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_terminal-unix.c_skip_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.termbuf = type { i32, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.termbuf*, i32)* @skip_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_buf(%struct.termbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.termbuf*, align 8
  %4 = alloca i32, align 4
  store %struct.termbuf* %0, %struct.termbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %7 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp ule i32 %5, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %13 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %12, i32 0, i32 2
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %17 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %4, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %23 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* %4, align 4
  %26 = sub i32 %24, %25
  %27 = call i32 @memmove(i32* %15, i32* %21, i32 %26)
  %28 = load i32, i32* %4, align 4
  %29 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %30 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = sub i32 %31, %28
  store i32 %32, i32* %30, align 8
  %33 = load %struct.termbuf*, %struct.termbuf** %3, align 8
  %34 = getelementptr inbounds %struct.termbuf, %struct.termbuf* %33, i32 0, i32 1
  store i64 0, i64* %34, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memmove(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
